update & fix: Meta Tag links and fixed navbar on mobile.

--- a/styles.css
+++ b/styles.css
@@ -2605,6 +2605,11 @@ video {
   .md\:gap-6 {
     gap: 1.5rem;
   }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
